--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "sequelize": "^6.3.5",
-    "sequelize-cockroachdb": "^1.1.0"
+    "sequelize-cockroachdb": "^1.1.0",
+    "passport": "^0.4.1"
   }
 }
