--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.3.5",
+    "sequelize-cockroachdb": "^1.1.0"
   }
 }
