--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "pg": "^8.5.1",
     "sequelize": "^6.3.5",
-    "sequelize-cockroachdb": "^1.1.0",
-    "passport": "^0.4.1"
+    "sequelize-cockroachdb": "^1.1.0"
   }
 }
