--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.4.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
-    "sequelize-cockroachdb": "^1.1.0"
+    "sequelize-cockroachdb": "^1.1.0",
+    "uuid": "^8.3.2"
   }
 }
