--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "react-dropzone": "^11.2.4",
     "sequelize": "^6.3.5",
     "sequelize-cockroachdb": "^1.1.0",
     "uuid": "^8.3.2"
