--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^3.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-icons": "^3.11.0",
     "react-query": "^3.5.14",
     "react-router": "^5.2.0",
