--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node server/index.js "
+    "start": "nodemon server/index.js "
   },
   "repository": {
     "type": "git",
